--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,7 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+videos/*.mp4 filter=lfs diff=lfs merge=lfs -text
+videos/*.mov filter=lfs diff=lfs merge=lfs -text
+videos/*.avi filter=lfs diff=lfs merge=lfs -text
+videos/*.MP4 filter=lfs diff=lfs merge=lfs -text
